src/objects/Authorization__c.object
<CustomObject>
    <fields>
        <fullName>Auth_Code_Id__c</fullName>
        <description>Code id for the authorization</description>
        <label>Auth Code Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pay_To_Affiliation_Id__c</fullName>
        <description>Provider pay to affiliation id</description>
        <label>Pay To Affiliation Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pay_To_Affiliation_Name__c</fullName>
        <description>Provider affiliation name</description>
        <label>Pay To Affiliation Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Refer_From_Entity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Refer from Provider entity id</description>
        <label>Refer From Entity</label>
        <referenceTo>Provider__c</referenceTo>
        <relationshipLabel>Authorization</relationshipLabel>
        <relationshipName>Authorization</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Refer_To_Entity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Refer to Provider entity id</description>
        <label>Refer To Entity</label>
        <referenceTo>Provider__c</referenceTo>
        <relationshipLabel>Authorization (Refer to Entity)</relationshipLabel>
        <relationshipName>Authorization1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_From__c</fullName>
        <description>Service start date for the case</description>
        <label>Service From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Service_To__c</fullName>
        <description>Service end date for the case</description>
        <label>Service To</label>
        <type>Date</type>
    </fields>
    <label>Authorization</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AUTH{00000000}</displayFormat>
        <label>Auth Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Authorization</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>